--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,6 @@ autograd==1.3
 backcall==0.1.0
 beautifulsoup4==4.6.3
 bs4==0.0.1
-CacheControl==0.12.6
-cachetools==3.1.1
-catalogue==1.0.0
-certifi==2020.4.5.1
 cloudpickle==1.3.0
 colorlover==0.3.0
 community==1.0.0b1
@@ -17,20 +13,13 @@ datascience==0.10.6
 decorator==4.4.2
 distributed==1.25.3
 earthengine-api==0.1.218
-easydict==1.9
-ecos==2.0.7.post1
 editdistance==0.5.3
 et-xmlfile==1.0.1
 fa2==0.3.5
 fancyimpute==0.4.3
 fix-yahoo-finance==0.0.22
 Flask==1.1.2
-gast==0.3.3
-gdown==3.6.4
 gensim==3.6.0
-geographiclib==1.50
-geopy==1.17.0
-gin-config==0.3.0
 glob2==0.7
 google==2.0.3
 google-api-core==1.16.0
@@ -50,33 +39,16 @@ google-pasta==0.2.0
 google-resumable-media==0.4.1
 googleapis-common-protos==1.51.0
 googledrivedownloader==0.4
-graphviz==0.10.1
-grpcio==1.28.1
-gspread==3.0.1
 gspread-dataframe==3.0.6
-gym==0.17.1
+gunicorn==19.9.0
 h5py==2.10.0
-HeapDict==1.0.1
-holidays==0.9.12
 html5lib==1.0.1
 httpimport==0.5.18
 httplib2==0.17.3
 httplib2shim==0.0.3
-humanize==0.5.1
-hyperopt==0.1.2
-ideep4py==2.0.0.post3
-idna==2.8
-image==1.5.31
-imageio==2.4.1
-imagesize==1.2.0
 imbalanced-learn==0.4.3
 imblearn==0.0
-imgaug==0.2.9
 importlib-metadata==1.6.0
-imutils==0.5.3
-inflect==2.1.0
-intel-openmp==2020.0.133
-intervaltree==2.1.0
 ipykernel==4.10.1
 ipython==5.5.0
 ipython-genutils==0.2.0
@@ -84,7 +56,6 @@ ipython-sql==0.3.9
 ipywidgets==7.5.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
-jmespath==0.9.5
 joblib==0.14.1
 jpeg4py==0.1.4
 jsonschema==2.6.0
@@ -98,8 +69,6 @@ Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 keras-vis==0.4.1
-kiwisolver==1.2.0
-knnimpute==0.1.0
 lmdb==0.98
 lxml==4.2.6
 Markdown==3.2.1
@@ -116,54 +85,21 @@ numpy==1.18.3
 nvidia-ml-py3==7.352.0
 oauth2client==4.1.3
 oauthlib==3.1.0
-okgrade==0.4.3
-opencv-contrib-python==4.1.2.30
-opencv-python==4.1.2.30
-openpyxl==2.5.9
-opt-einsum==3.2.1
-osqp==0.6.1
 packaging==20.3
 palettable==3.3.0
 pandas==1.0.3
 pandas-datareader==0.8.1
 pandas-gbq==0.11.0
 pandas-profiling==1.4.1
-pandocfilters==1.4.2
-parso==0.7.0
-pathlib==1.0.1
-patsy==0.5.1
-pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==7.0.0
 pip-tools==4.5.1
 plac==1.1.3
 plotly==4.4.1
-plotnine==0.6.0
-pluggy==0.7.1
-portpicker==1.3.1
-prefetch-generator==1.0.1
-preshed==3.0.2
-prettytable==0.7.2
-progressbar2==3.38.0
-prometheus-client==0.7.1
-promise==2.3
-prompt-toolkit==1.0.18
-protobuf==3.10.0
-psutil==5.4.8
-psycopg2==2.7.6.1
-ptvsd==5.0.0a12
-ptyprocess==0.6.0
 py==1.8.1
-pyarrow==0.14.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
 pydata-google-auth==1.0.0
 PyDrive==1.3.1
 pyparsing==2.4.7
-pyrsistent==0.16.0
-PySocks==1.7.1
-pystan==2.19.1.1
 python-chess==0.23.11
 python-dateutil==2.8.1
 python-louvain==0.14
@@ -184,16 +120,10 @@ scikit-image==0.16.2
 scikit-learn==0.22.2.post1
 scs==2.1.2
 seaborn==0.10.0
-Send2Trash==1.5.0
 setuptools-git==1.2
-Shapely==1.7.0
-simplegeneric==0.8.1
-six==1.12.0
 sklearn==0.0
 sklearn-pandas==1.8.0
 smart-open==1.11.1
-snowballstemmer==2.0.0
-sortedcontainers==2.1.0
 spacy==2.2.4
 tblib==1.6.0
 tensorboard==2.2.1
@@ -213,14 +143,8 @@ terminado==0.8.3
 testpath==0.4.4
 text-unidecode==1.3
 textblob==0.15.3
-textgenrnn==1.4.1
-Theano==1.0.4
 tqdm==4.38.0
-umap-learn==0.4.1
-uritemplate==3.0.1
 urllib3==1.24.3
-vega-datasets==0.8.0
-wordcloud==1.5.0
 xarray==0.15.1
 xgboost==1.0.2
 zipp==3.1.0
