--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 backcall==0.1.0
-beautifulsoup4==4.6.3
+beautifulsoup4==4.7.1
 bs4==0.0.1
-cloudpickle==1.3.0
-editdistance==0.5.3
+certifi==2018.11.29
+chardet==3.0.4
 Flask==1.1.2
 gensim==3.6.0
 google==2.0.3
+google-api-core==1.16.0
+google-api-python-client==1.7.12
+google-auth==1.7.2
+google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.4.1
 google-colab==1.0.0
 gunicorn==19.9.0
 h5py==2.10.0
@@ -18,51 +23,36 @@ imblearn==0.0
 ipykernel==4.10.1
 ipython==5.5.0
 ipython-genutils==0.2.0
-joblib==0.14.1
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.3.4
-jupyter-console==5.2.0
-jupyter-core==4.6.3
-kaggle==1.5.6
+idna==2.8
 Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 keras-vis==0.4.1
-lxml==4.2.6
-Markdown==3.2.1
-matplotlib==3.2.1
-matplotlib-venn==0.11.5
-mkl==2019.0
-nltk==3.2.5
-notebook==5.2.2
-np-utils==0.5.12.1
+lxml==4.3.1
+nltk==3.4
 numpy==1.18.3
 oauth2client==4.1.3
 oauthlib==3.1.0
-pandas==1.0.3
-pandas-datareader==0.8.1
-pickleshare==0.7.5
-plotly==4.4.1
-py==1.8.1
-pydata-google-auth==1.0.0
-python-slugify==4.0.0
-python-utils==2.4.0
-PyYAML==3.13
-regex==2019.12.20
+praw==6.1.1
+prawcore==1.0.1
+pytz==2018.9
 requests==2.21.0
-requests-oauthlib==1.3.0
-scikit-learn==0.22.2.post1
-scs==2.1.2
-seaborn==0.10.0
-sklearn==0.0
-sklearn-pandas==1.8.0
-smart-open==1.11.1
+scikit-learn==0.22.2
+scipy==1.2.1
+update-checker==0.16
+urllib3==1.24.1
+psycopg2
+pandas==0.24.1
 tblib==1.6.0
 tensorboard==2.2.1
+tensorboard-plugin-wit==1.6.0.post3
+tensorboardcolab==0.0.22
 tensorflow==2.2.0rc3
+tensorflow-addons==0.8.3
+tensorflow-datasets==2.1.0
+tensorflow-estimator==2.2.0
+tensorflow-gcs-config==2.1.8
 textblob==0.15.3
 tqdm==4.38.0
-urllib3==1.24.3
 xgboost==1.0.2
 zipp==3.1.0
