--- a/requirements.txt
+++ b/requirements.txt
@@ -35,3 +35,7 @@ textblob==0.15.3
 tqdm==4.38.0
 xgboost==1.0.2
 zipp==3.1.0
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+Werkzeug==0.15.5
