--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,20 @@ backcall==0.1.0
 beautifulsoup4==4.7.1
 bs4==0.0.1
 certifi==2018.11.29
+click==7.1.1
+cloudpickle==1.3.0
 chardet==3.0.4
+editdistance==0.5.3
+en-core-web-sm==2.2.5
 Flask==1.1.2
 gensim==3.6.0
 google==2.0.3
 google-colab==1.0.0
 gunicorn==19.9.0
+html5lib==1.0.1
+httpimport==0.5.18
+httplib2==0.17.3
+httplib2shim==0.0.3
 imbalanced-learn==0.4.3
 imblearn==0.0
 ipykernel==4.10.1
@@ -17,20 +25,28 @@ idna==2.8
 Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
+et-xmlfile==1.0.1
 keras-vis==0.4.1
+matplotlib==3.2.1
+matplotlib-venn==0.11.5
 lxml==4.3.1
 nltk==3.4
 numpy==1.18.3
+notebook==5.2.2
+np-utils==0.5.12.1
 praw==6.1.1
 prawcore==1.0.1
 pytz==2018.9
 requests==2.21.0
+Markdown==3.2.1
 scikit-learn==0.22.2
 scipy==1.2.1
 update-checker==0.16
-urllib3==1.24.1
+urllib3==1.24.2
 psycopg2
 pandas==0.24.1
+pip-tools==4.5.1
+pickleshare==0.7.5
 textblob==0.15.3
 tqdm==4.38.0
 xgboost==1.0.2
@@ -39,3 +55,10 @@ itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 Werkzeug==0.15.5
+plotly==4.4.1
+plotnine==0.6.0
+xarray==0.15.1
+tqdm==4.38.0
+seaborn==0.10.0
+regex==2019.12.20
+PyYAML==3.13
